# mongodb-hackathon

./: .gitignore  AGENTS.md  INTEGRATION.md  LICENSE  README.md  plan.md  pyproject.toml
backend/: .env.example
backend/app/: main.py
backend/app/audio/: __init__.py  denoiser.py  embeddings.py  pipeline.py  segmenter.py
backend/app/core/: __init__.py  models.py
backend/app/services/: conversation_stream.py  vector_store.py
dummy_frontend/: index.html
frontend/: CLAUDE.md  package-lock.json  package.json  server.js
frontend/app/: globals.css  layout.tsx
frontend/components/: face-notification.tsx  person-notification.tsx  rayban-overlay.tsx  webcam-stream.tsx
inference/: .gitignore  DEMENTIA_CARE_UPDATES.md  README.md  TWO_EVENT_DESIGN.md  TWO_EVENT_TYPES_FINAL.md  fireworks_client.py  main.py  mock_consumer.py  mock_metadata_service.py  models.py  requirements.txt
mock-backend/: QUICKSTART.md  README.md  env.example  pyproject.toml  requirements.txt
mock-backend/app/: contracts.py  main.py
training/: .env.example  README.md  config.py  fireworks_finetune.py  fireworks_ui_instructions.md  generate_ar_display_data.py  generate_ar_display_data_v2.py  generate_context_aggregation_data.py  requirements.txt
training/data/: ar_display_training.jsonl  context_aggregation_training_new.jsonl
