[project]
name = "mock-backend"
version = "0.1.0"
description = "Mock FastAPI backend with WebRTC, SSE, and WebSocket for testing"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "aiortc==1.7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

